--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,26 +6,27 @@ pipeline {
         }
     }
 environment {
-   PATH="/opt/apache-maven-3.9.4/bin:$PATH"
+   PATH = "/opt/apache-maven-3.9.4/bin:$PATH"
 }    
 
-    stages {
-        stage("build") {
-            steps {
-                sh 'mvn clean deploy'
-            }
+   stages {
+       stage("build") {
+           steps {
+              sh 'mvn clean deploy'
+          }
         }
-    }
     
-    stages ('SonarQube analysis') {
-    environment{    
-     scannerHome = tool 'sonar-scanner'
-    }
-    steps{
-    withSonarQubeEnv('sonarqube-server') { // If you have configured more than one global server connection, you can specify its name
-      sh "${scannerHome}/bin/sonar-scanner"
-    }
-  }
+    
+        stage('SonarQube analysis') {
+           environment{    
+               scannerHome = tool 'sonar-scanner'
+            }
+          steps{
+             withSonarQubeEnv('sonarqube-server') { // If you have configured more than one global server connection, you can specify its name
+                sh "${scannerHome}/bin/sonar-scanner"
+                          }
+                      } 
+                   }
 }
 }
 
