added jar publish stage

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,4 +1,4 @@
-def registry = 'https://valaxy00.jfrog.io/'
+def registry = 'https://valaxy00.jfrog.io'
 pipeline {
     agent {
         node {
@@ -57,7 +57,7 @@ environment {
               steps {
                 script {
                     echo '<--------------- Jar Publish Started --------------->'
-                     def server = Artifactory.newServer url:registry+"/artifactory" ,  credentialsId:"artfiact-cred"
+                     def server = Artifactory.newServer url:registry+"/artifactory" ,  credentialsId:"artifact-cred"
                      def properties = "buildid=${env.BUILD_ID},commitid=${GIT_COMMIT}";
                      def uploadSpec = """{
                           "files": [
