updated jenkinsfile with deployment stage for k8s

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -102,6 +102,13 @@ environment {
             }
         }
     }
+     stage("deploy"){
+      steps{
+        script{
+          sh './deploy.sh'
+        }
+      }
+     }
 }
 }
 
